--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "gulp-jshint": "^1.6.3",
     "gulp-load-plugins": "^0.6.0",
     "gulp-minify-html": "^0.1.5",
+    "gulp-nodemon": "^2.0.2",
     "gulp-replace": "^0.4.0",
-    "gulp-less": "^3.0.2",
+    "gulp-ruby-sass": "^0.7.1",
     "gulp-size": "^1.0.0",
     "gulp-uglify": "^1.0.1",
     "gulp-uncss": "^0.4.5",
